[gd_scene load_steps=10 format=3 uid="uid://baobwb6k6vnn2"]

[ext_resource type="Texture2D" uid="uid://ckleyl2twic8q" path="res://assets/Tiny Swords (Update 010)/Resources/Sheep/HappySheep_All.png" id="1_28owt"]
[ext_resource type="Script" path="res://scripts/interactables/sheep.gd" id="1_solfv"]
[ext_resource type="PackedScene" uid="uid://drjbdcg44opnr" path="res://scenes/effects/dust.tscn" id="3_c53gr"]
[ext_resource type="PackedScene" uid="uid://b4t5htfm4yk6a" path="res://scenes/character/Component/health_component.tscn" id="4_w6vkd"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_5j0xg"]
radius = 8.0
height = 40.0

[sub_resource type="Animation" id="Animation_nbso3"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Texture:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_ip38m"]
resource_name = "idle"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Texture:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7]
}

[sub_resource type="Animation" id="Animation_ijxfl"]
resource_name = "walk"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Texture:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [8, 9, 10, 11, 12, 13]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ebl3b"]
_data = {
"RESET": SubResource("Animation_nbso3"),
"idle": SubResource("Animation_ip38m"),
"walk": SubResource("Animation_ijxfl")
}

[node name="Sheep" type="CharacterBody2D" node_paths=PackedStringArray("_sprite", "_animation", "_walk_timer", "_run_timer", "_dust", "_health_component")]
script = ExtResource("1_solfv")
_max_health = 10
_sprite = NodePath("Texture")
_animation = NodePath("Animation")
_walk_timer = NodePath("WalkTimer")
_run_timer = NodePath("RunTimer")
_dust = NodePath("Dust")
_health_component = NodePath("HealthComponent")

[node name="Texture" type="Sprite2D" parent="."]
position = Vector2(0, -17)
texture = ExtResource("1_28owt")
hframes = 8
vframes = 2

[node name="Collision" type="CollisionShape2D" parent="."]
show_behind_parent = true
position = Vector2(0, -4)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_5j0xg")

[node name="Animation" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_ebl3b")
}

[node name="WalkTimer" type="Timer" parent="."]
one_shot = true

[node name="RunTimer" type="Timer" parent="."]
one_shot = true

[node name="Dust" parent="." instance=ExtResource("3_c53gr")]
amount = 8

[node name="HealthComponent" parent="." instance=ExtResource("4_w6vkd")]
position = Vector2(-50, -48)
scale = Vector2(0.720001, 1)

[connection signal="timeout" from="WalkTimer" to="." method="_on_walk_timer_timeout"]
[connection signal="timeout" from="RunTimer" to="." method="_on_run_timer_timeout"]
